Created app pages

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,8 @@
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+     <ion-button
+     routerLink="/tabs"
+     style="margin-left: 20px; margin-right: 20px; height: 45px;">Get Started</ion-button>
   </div>
 </ion-content>
