--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,9 +1,23 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>tabs</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <ion-tabs>
+
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="tab1" layout="icon-top">
+        <ion-icon name="search"></ion-icon>
+        <ion-label>Explore</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="tab2" layout="icon-top">
+        <ion-icon name="gift"></ion-icon>
+        <ion-label>Wishlists</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="tab3" layout="icon-top">
+        <ion-icon name="people-circle"></ion-icon>
+        <ion-label>Groups</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+
+  </ion-tabs>
 
 </ion-content>
