--- a/src/app/toptabs/toptabs.page.html
+++ b/src/app/toptabs/toptabs.page.html
@@ -1,9 +1,20 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Toptabs</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <ion-tabs>
+
+    <ion-tab-bar slot="top">
+      <ion-tab-button tab="tab4">
+        <ion-label>Explore</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="tab4" >
+        <ion-label>Wishlists</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="tab5">
+        <ion-label>Groups</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+
+  </ion-tabs>
 
 </ion-content>
